# partdiff-py

./: README.md  main.py  options.py  parse_args.py  pyproject.toml
.github/workflows/: correctness_check.yaml  test_cython.yaml  test_np_vectorize.yaml  test_nuitka.yaml  test_numba.yaml  test_simple.yaml
0_simple/: main.py  pyproject.toml
benchmark/: benchmark.py  benchmark.sh  benchmark_results.csv  main.py  make_table.py  pyproject.toml
cython/: .gitignore  calculate.pyx  main.py  pyproject.toml  setup.py
np_vectorize/: main.py
nuitka/: .gitignore  pyproject.toml
numba/: main.py  pyproject.toml
partdiff_common/: pyproject.toml
partdiff_common/src/partdiff_common/: __init__.py  parse_args.py
simple/: main.py  pyproject.toml
